attempted to fix nav's ability to be dragged off screen

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -33,3 +33,10 @@ a:hover{
 .nav{
   font-family: 'FiraCode', monospace;
 }
+
+html, body {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+}
